# pinguinos

penguins-classifier/: pyproject.toml
penguins-classifier/models/: decision_tree.joblib  knn.joblib  logistic_regression.joblib  preprocessor.joblib  svm.joblib
penguins-classifier/penguins_classifier/: client.py  preprocessing.py  train_models.py
penguins-classifier/penguins_classifier/servers/: decision_tree_server.py  knn_server.py  logistic_regression_server.py  svm_server.py
