[tool.poetry]
name = "penguins-classifier"
version = "0.1.0"
description = ""
authors = ["laura.srodriguez <mellamolaurasanchez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
Flask = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
